@@ -115,8 +115,8 @@ Using the \`tidy' mode brings several advantages:
   - the current directory is not cluttered with plethora of temporary files.
   - clutter can be even reduced using --build-dir=dir: all the *.t2d
     directories are stored there.
-  - clutter can be reduced to zero using --build-dir=/tmp/\$USER.t2d or
-    --build-dir=$HOME/.t2d.
+  - clutter can be reduced to zero using,e.g., --build-dir=/tmp/\$USER.t2d or
+    --build-dir=\$HOME/.t2d.
   - the output file is updated after every succesful TeX run, for
     sake of concurrent visualization of the output.  In a \`local' build
     the viewer stops during the whole TeX run.
